Add $INSTCMDS to Dockerfile for nut

--- a/images/nut-upsd/Dockerfile
+++ b/images/nut-upsd/Dockerfile
@@ -12,6 +12,7 @@ ENV API_USER=upsmon \
     API_PASSWORD= \
     DESCRIPTION=UPS \
     DRIVER=usbhid-ups \
+    INSTCMDS= \
     GROUP=nut \
     NAME=ups \
     POLLINTERVAL= \
